--- a/.github/workflows/update-gitignore.yml
+++ b/.github/workflows/update-gitignore.yml
@@ -15,6 +15,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Set up Git identity
+      run: |
+        git config --global user.name "GitHub Actions"
+        git config --global user.email "actions@github.com"
+
     - name: Update .gitignore
       run: |
         echo "# Ignore Jupyter notebook files" > .gitignore
